fix: add extra padding to the macro list

--- a/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
+++ b/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
@@ -3,6 +3,7 @@
 :host {
     display: flex;
     flex-direction: column;
+    padding-bottom: 5em;
 
     .list-container {
         display: flex;
